[package]
name = "wgpu-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
bytemuck = "1.13.1"
env_logger = "0.10.0"
getrandom = "0.2.9"
glam = "0.24.0"
int-enum = "0.5.0"
log = "0.4.17"
ndarray = "0.15.6"
pollster = "0.3.0"
seq-macro = "0.3.3"
wgpu = "0.16.0"
winit = { git = "https://github.com/Liamolucko/winit", branch = "resize-observer2", features = ["css-size"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.61" # Specific to FlexDecoder
web-sys = { version = "0.3.61", features = ["Document", "Text", "HtmlCanvasElement", "Blob", "ImageBitmap", "ImageData", "OffscreenCanvas", "ContextAttributes2d", "OffscreenCanvasRenderingContext2d"] } # All after Text specific to FlexDecoder
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2.9", features = ["js"] }
rand = { version = "0.8.5", features = ["alloc", "getrandom", "libc", "std", "std_rng"], default-features = false }
image = { version = "0.24.6", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"
image = { version = "0.24.6", features = ["png"], default-features = false }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

# To build for Twiggy space profiler, uncomment these and run wasm-pack with --dev instead of --target web
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-g', '-O']

